# profile-rs

./: Cargo.toml  README.md
.github/workflows/: rel_20.04.yml  rel_22.04.yml  rust.yml
src/: main.rs
