[package]
name = "profile-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version = "4.5", features = ["derive"]}
toml = { version = "0.9", features = ["preserve_order"] }
log = "0.4.29"
clap-logflag = "0.2.1"
serde = { version = "1.0.228", features = ["derive"] }

[profile.release]
strip = "symbols"
